[package]
name = "turbofind"
version = "1.0.0"
edition = "2021"
description = "Blazing fast file indexer and search for Windows"

[dependencies]
walkdir = "2"
rayon = "1.10"
nucleo = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
crossterm = "0.28"
unicode-width = "0.2"
dirs = "5"
notify = "6"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
