[package]
name = "turbofind"
version = "2.0.1"
edition = "2024"
description = "Blazing fast file indexer and search for Windows"

[dependencies]
walkdir = "2"
rayon = "1.10"
nucleo = "0.5.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
crossterm = "0.29"
dirs = "6"
zip = "2"
pdf-extract = "0.7"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
